--- a/rdr_service/rdr_client/Makefile
+++ b/rdr_service/rdr_client/Makefile
@@ -10,6 +10,13 @@
 	python3 -m pip freeze > requirements_pip_freeze.txt &&\
 	which pip3 && which python3 && python3 --version
 
+config_check:
+	# make sure you are calling the function from institute network(ACL)
+	curl ipinfo.io/ip
+
+	# log in gcloud
+	gcloud auth login
+
 work_queue: .venv
 	. ./.venv/bin/activate &&\
-	./run_client.sh --project all-of-us-rdr-prod --account ${ALLOFUS_PMI_OPS_ORG_ACCOUNT} --service_account ${ALLOFUS_SERVICE_ACCOUNT} work_queue.py
+	./run_client.sh --project ${ALLOFUS_PROJECT_ID} --account ${ALLOFUS_PMI_OPS_ORG_ACCOUNT} --service_account ${ALLOFUS_SERVICE_ACCOUNT} work_queue.py
